--- a/learn-certs-pr/azure-iot-developer-specialty.yml
+++ b/learn-certs-pr/azure-iot-developer-specialty.yml
@@ -6,17 +6,19 @@ metadata:
 uid: certification.azure-iot-developer-specialty
 iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.svg
 summary: |-
-  Этот экзамен позволяет оценить вашу способность понимать следующие концепции: внедрение служб Azure, которые формируют IoT решение, включая анализ данных, обработку данных, параметры хранения данных и параметры Платформа как услуга. IoT Developer должен уметь распознавать параметры конфигурации службы IoT Azure в части кода решения IoT.
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+
+  Этот экзамен позволяет оценить вашу способность понимать следующие концепции&#58; внедрение служб Azure, которые формируют IoT решение, включая анализ данных, обработку данных, параметры хранения данных и параметры Платформа как услуга. IoT Developer должен уметь распознавать параметры конфигурации службы IoT Azure в части кода решения IoT.
 subTitle: 'Этот экзамен позволяет оценить вашу способность понимать следующие концепции: внедрение служб Azure, которые формируют IoT решение, включая анализ данных, обработку данных, параметры хранения данных и параметры Платформа как услуга. IoT Developer должен уметь распознавать параметры конфигурации службы IoT Azure в части кода решения IoT.'
 levels:
 - intermediate
 skills:
-- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- 'Примечание: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Внедрение инфраструктуры IoT-решения
 - Обеспечение и управление устройствами
 - Внедрение Edge
 - Обработка и управление данными
-- Мониторинг, устранение неполадок и оптимизация решений IoT 
+- Мониторинг, устранение неполадок и оптимизация решений IoT
 - Реализация безопасности
 roles:
 - developer
@@ -27,11 +29,16 @@ products:
 - azure-iot-hub
 courses:
 - uid: course.az-220t00
+paths:
+- uid: learn.introduction-to-azure-iot
+- uid: learn.securely-connect-iot-devices-to-cloud
+- uid: learn.build-intelligent-edge-with-azure-iot-edge
+- uid: learn-develop-solutions-with-azure-iot-central
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4nw1V
 exams:
 - uid: exam.az-220
 resources:
-- title: Руководство по обучению и сертификации
+- title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
@@ -40,9 +47,10 @@ resources:
 - title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: deals.md
-- title: Поддержка сертификационных
+- title: Поддержка по вопросам сертификации
   description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
