--- a/learn-certs-pr/courses/dp-070t00.yml
+++ b/learn-certs-pr/courses/dp-070t00.yml
@@ -49,7 +49,7 @@ outlineSection: |-
   - Знать о проблемах клиентов при переносе данных
 
 
-  ### ### Модуль 2&#58; Перенос локальной базы данных MySQL в Azure SQL для MySQL.
+  ### Модуль 2&#58; Перенос локальной базы данных MySQL в Azure SQL для MySQL.
   В этом модуле описываются преимущества и процесс миграции рабочих нагрузок MySQL на Azure SQL DB.
   #### Уроки
   - Производить настройку и управление Azure SQL DB для MySQL
@@ -61,7 +61,7 @@ outlineSection: |-
   #### Лабораторная работа&#58; Перенос рабочих нагрузок MySQL DB в Azure SQL DB
   - Перенос рабочих нагрузок базы данных MySQL на базу данных SQL Azure
   - Определение исходных и целевых БД
-  - Осуществление миграции 
+  - Осуществление миграции
   - Проверка миграции
 
   После завершения этого модуля студенты получат следующее&#58;
@@ -80,7 +80,7 @@ outlineSection: |-
   - Участвовать в обсуждении после осуществления миграции
 
 
-  #### Лабораторная работа&#58; Миграция рабочих нагрузок  БД PostgreSQL на БД Azure SQL 
+  #### Лабораторная работа&#58; Миграция рабочих нагрузок  БД PostgreSQL на БД Azure SQL
   - Настройка SQL Azure DB для PostgreSQL
   - Определение исходных и целевых БД
   - Осуществление миграции
@@ -92,5 +92,7 @@ outlineSection: |-
   - Осуществлять миграцию приложений
   - Участвовать в обсуждении после осуществления миграции
 
-  #### Дополнительные сведения. Никаких дополнительных сведений не требуется, чтобы пройти этот курс.
+  #### Дополнительные сведения
+
+  Никаких дополнительных сведений не требуется, чтобы пройти этот курс.
 
