--- a/learn-certs-pr/courses/mb-200t00.yml
+++ b/learn-certs-pr/courses/mb-200t00.yml
@@ -8,12 +8,12 @@ courseNumber: 'MB-200T00-A'
 hoursToComplete: 120
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Определение компонентов платформы
-- skill: Понимание средств администратора
-- skill: Эффективное моделирование данных
-- skill: Создание приложения на основе базовой модели или холста
-- skill: Определение стратегии и методики тестирования
-- skill: Определение возможности интеграции
+- skill: Определение компонентов платформы.
+- skill: Понимание средств администратора.
+- skill: Эффективное моделирование данных.
+- skill: Создание приложения на основе базовой модели или холста.
+- skill: Определение стратегии и методики тестирования.
+- skill: Определение возможности интеграции.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -33,7 +33,7 @@ summary: |-
   Платформа Microsoft Power Platform помогает организациям оптимизировать свои операции, автоматизируя рутинные задачи и стандартизируя лучшие практики. В этом тренинге представлен общий обзор возможностей Microsoft Dynamics 365 и Power Platform, а также заложена основа для других предложений по обучению Microsoft Dynamics 365 и Power Platform. Темы высокого уровня включают настройку приложений, возможности автоматизации, интеграцию, тестирование и развертывание.
 
   #### Профиль аудитории
-  Функциональный консультант по взаимодействию с клиентами Dynamics 365 отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант по Dynamics 365 отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 outlineSection: |-
   ### Модуль 1&#58; Обзор Power Platform
   В этом модуле вы познакомитесь с основами Power Platform.  Вы сможете войти на различные порталы администратора и установите приложения.
@@ -134,7 +134,7 @@ outlineSection: |-
 
 
   ### Модуль 9&#58; Потоки Microsoft Flows
-  В этом модуле вы узнаете, как создавать и использовать Microsoft Flows и и как они работают вместе с другими узлами автоматизированной платформы.
+  В этом модуле вы узнаете, как создавать и использовать Microsoft Flows и как они работают вместе с другими узлами автоматизированной платформы.
   #### Уроки
   - Введение в Microsoft Flow
   - Другие концепции потока
@@ -232,3 +232,4 @@ outlineSection: |-
   После завершения этого модуля вы будете&#58;
   - Настраивать для мобильных устройств.
   - Развертывать компоненты.
+
