--- a/learn-certs-pr/courses/mb-300t00.yml
+++ b/learn-certs-pr/courses/mb-300t00.yml
@@ -35,15 +35,15 @@ products:
 exams:
 - uid: exam.mb-300
 summary: |-
-  В этом курсе обсуждаются:
-  - Основные общие характеристики Dynamics 365 for Finance and Operations
-  - Базовая конфигурация в Dynamics 365 for Finance and Operations
-  Перенос данных и подготовка к работе с Dynamics 365 for Finance and Operations
-  Организации используют Dynamics 365 для финансов и операций, чтобы снизить эксплуатационные расходы и быстро реагировать на меняющиеся потребности бизнеса. Это решение позволяет организациям достичь этих целей.
-  В этом курсе обсуждаются основные компоненты и конфигурация Microsoft Dynamics 365 for Finance and Operations, а также миграция данных и подготовка к работе в режиме реального времени.
+  В этом курсе обсуждаются&#58;
+  - Основные общие характеристики Dynamics 365 Finance
+  - Основные конфигурацию в Dynamics 365 Finance
+  -  миграция данных и подготовка к работе в режиме реального времени с Dynamics 365 Finance
+  Организации используют Dynamics 365 Finance, чтобы снизить эксплуатационные расходы и быстро реагировать на меняющиеся потребности бизнеса. Это решение позволяет организациям достичь этих целей.
+  В этом курсе обсуждаются основные компоненты и конфигурация Microsoft Dynamics 365 Finance, а также миграция данных и подготовка к работе в режиме реального времени.
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант по Dynamics 365 Finance отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Перед посещением этого курса студенты должны иметь&#58;
   - общие знания о Microsoft Windows
@@ -112,7 +112,7 @@ outlineSection: |-
 
   ### Модуль 4&#58; Обзор отчетности и аналитики
   Бизнес-лидеры принимают важные решения в своей компании с точным пониманием основных финансовых и операционных данных. Без видимости этих данных, это было бы невозможно!
-  Используя аналитику и отчетность в Dynamics 365 for Finance and Operations, вы можете предоставить каждому бизнес пользователю, в зависимости от его прав безопасности, возможность получать необходимые аналитические данные .
+  Используя аналитику и отчетность в Dynamics 365 for Finance and Operations, вы можете предоставить каждому бизнес пользователю, в зависимости от его прав безопасности, возможность получать необходимые аналитические данные.
   #### Уроки
   - Понимание отчетов и запросов
   - Узнайте о том, Финансовая отчетность
@@ -307,7 +307,7 @@ outlineSection: |-
   - Подготовка к запуску
   - Краткое содержание модуля
 
-  Подготовка к вводу в эксплуатацию
+  Готовьтесь к режиме реального времени
   - Заполнение методологии Lifecycle Services (LCS)
   - Проведение тестирования принятия  пользователем (UAT) для вашего решения.
   - Понимание оценки FastTrack в реальном времени
@@ -322,3 +322,4 @@ outlineSection: |-
   - Опрос после курса
 
   Вы закончили курс.
+
