--- a/learn-certs-pr/courses/mb-310t00.yml
+++ b/learn-certs-pr/courses/mb-310t00.yml
@@ -22,10 +22,10 @@ products:
 exams:
 - uid: exam.mb-310
 summary: |-
-  В данном курсе освещаются финансовые аспекты Dynamics 365: настройка и использование основных финансовых компонентов, счета к оплате, счета к получению, сбор задолженностей, планирование бюджета, основные средства и дополнительные функции
+  В данном курсе освещаются финансовые аспекты Dynamics 365&#58; настройка и использование основных финансовых компонентов, счета к оплате, счета к получению, сбор задолженностей, планирование бюджета, основные средства и дополнительные функции
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант по Dynamics 365 Finance отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   Базовые профессиональные навыки ведения бухгалтерского учета skillsCore в основной системе Dynamics 365 Core
 outlineSection: |-
@@ -72,7 +72,7 @@ outlineSection: |-
   - Лабораторные практикумы
   - Краткое содержание модуля
 
-  - Определение необходимых компонентов плана счетов.
+  Определение необходимых компонентов плана счетов.
   - Определение и настройка плана счетов.
   - Определение и настройка финансовых измерений и наборов измерений.
   - Настройка плана счетов, основных счетов, категорий, шаблонов, псевдонима учетной записи и баланса
@@ -183,7 +183,7 @@ outlineSection: |-
   - Лабораторный практикум
   - Краткое содержание модуля
 
-  - вы смогут настроить и использовать внутрикорпоративный учет
+  вы смогут настроить и использовать внутрикорпоративный учет
 
   ### Модуль 11&#58; Настройка распределения и начислений Главной книги
   Раздел «Финансы и операции» предоставляет возможности для поддержки схем начисления.
@@ -259,7 +259,7 @@ outlineSection: |-
   - Краткое содержание модуля
 
   Расчет транзакций и отмена расчетов.
-  Распределение фондов с помощью учета распределения.
+  - Распределение фондов с помощью учета распределения.
   - Настройка политик проверки счетов.
 
 
@@ -277,9 +277,9 @@ outlineSection: |-
   - Краткое содержание модуля
 
   Настройка компонентов дебиторской задолженности
-  - Создание и поддержка клиентов
-  - платежей клиентов конфигурации.
-  - Настройка платежей клиентов
+  - Создание и поддержка клиент
+  - платежей клиентов онфигурации.
+  - Настройка профилей проводок клиентов
   - Настройка дебиторской задолженности
 
 
@@ -291,7 +291,7 @@ outlineSection: |-
   - Лабораторный практикум
   - Краткое содержание модуля
 
-  Распределение фондов с помощью Распределения по бухгалтерским счетам
+  Распределение фондов с помощью учета распределения
   - Создание бесплатных текстовых счетов и запись платежей клиентов
   - Настройка повторяющихся счетов
   - Использование возвратов в дебиторской задолженности
@@ -308,7 +308,7 @@ outlineSection: |-
   - Настройка компонентов кредита и сборов
   - Настройка и управление интересами
   - Отказ, восстановление или реверс
-  - Настройка и управление письмами сбора
+  - Настройка коллекторских писем и управление ими
   - Лабораторный практикум
   - Краткое содержание модуля
 
@@ -333,7 +333,7 @@ outlineSection: |-
   - Как обработать коллекцию
 
 
-  ### Модуль 20&#58; Настройка датированных чеков
+  ### Модуль 20&#58; Настройка PostDated чеков
   Чеки, датированные числом, представляют собой чеки, которые выдаются для осуществления и получения платежей в будущем. Поэтому такой чек не может быть обналичен до указанной даты.
 
   Microsoft Dynamics 365 для финансов и операций поддерживает полный цикл управления чеками с датой и в дебиторской, и в кредиторской задолженностях. В этом разделе объясняется, как настраивать и обрабатывать датированные чеки.
@@ -512,7 +512,7 @@ outlineSection: |-
   - Лабораторные практикумы
   - Краткое содержание модуля
 
-  Создание фондов для государственного сектора
+  Настройка фондов для государственного сектора
   - Понимание методов банковской сверки
   - Настройка производных размеров
   - Установка производных финансовых иерархий для государственного сектора
@@ -528,3 +528,4 @@ outlineSection: |-
   - Опрос после курса
 
   Вы закончили курс.
+
