--- a/learn-certs-pr/courses/mb-320t00.yml
+++ b/learn-certs-pr/courses/mb-320t00.yml
@@ -22,10 +22,10 @@ products:
 exams:
 - uid: exam.mb-320
 summary: |-
-  Этот курс рассматривает функционал набора приложений Dynamics 365: дискретное производство, экономичное производство и производство
+  Этот курс рассматривает функционал набора приложений Dynamics 365&#58; дискретное производство, экономичное производство и производство
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант по Dynamics 365 Finance отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 prerequisitesSection: |-
   - Основные навыки в области производства
   - Основные навыки работы с Dynamics 365
@@ -57,7 +57,7 @@ outlineSection: |-
   - Понимание дискретных статусов производственного процесса
   - Понимание спецификации
   - Работа с спецификациями и конфигурациями элементов
-  - Спецификация материалов (BOM)
+  - Спецификация материалов
   - Производственные заказы
   - Лабораторные практикумы
   - Краткое содержание модуля
@@ -350,3 +350,4 @@ outlineSection: |-
   - Краткое содержание курса
 
   Вы завершили курс
+
