--- a/learn-certs-pr/courses/mb-330t00.yml
+++ b/learn-certs-pr/courses/mb-330t00.yml
@@ -25,7 +25,7 @@ summary: |-
   В данном курсе рассматривается управление цепочками поставок в комплекте приложений Dynamics 365
 
   #### Профиль аудитории
-  Функциональный консультант Dynamics 365 по финансам и операциям отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Функциональный консультант по Dynamics 365 Finance отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
 outlineSection: |-
   ### Модуль 1&#58; Управление поставками
   Чтобы настроить инвентаризацию, нужно сначала понять ежедневные операции инвентаризации. В этом уроке мы сначала обсудим входящие и исходящие операции инвентаризации.
@@ -79,7 +79,7 @@ outlineSection: |-
 
 
   ### Модуль 4&#58; Создание товаров и мастеров товаров
-  Раздел «Управление информацией о товарах» в Dynamics 365 for Finance and Operations предназначен для создания и обслуживания репозитория корпоративных продуктов. Он поддерживает централизованный, структурированный подход  крупных организаций к созданию и ведению основных основных данных, таких как определения продуктов. Небольшие организации, которым требуется более децентрализованный подход, могут с некоторыми ограничениями создавать и поддерживать свои соответствующие товары, в то время как их товары автоматически добавляются в общий репозиторий.
+  Раздел «Управление информацией о товарах» в Dynamics 365 for Finance and Operations предназначен для создания и обслуживания репозитория корпоративных продуктов. Он поддерживает централизованный, структурированный подход  крупных организаций к созданию и ведению основных данных, таких как определения продуктов. Небольшие организации, которым требуется более децентрализованный подход, могут с некоторыми ограничениями создавать и поддерживать свои соответствующие товары, в то время как их товары автоматически добавляются в общий репозиторий.
 
   В этом разделе объясняется, как настроить товары для процессов управления цепочками поставок в Финансах и Операциях.
   #### Уроки
@@ -143,7 +143,7 @@ outlineSection: |-
   - Использование совместной работы с поставщиками как часть процесса закупок к оплате
 
 
-  ### Модуль 8&#58; Настройка и выполнение процесса от-производства-до-покупки
+  ### Модуль 8&#58;  Настройка и выполнение процесса от-покупки-до-оплаты
   Модуль «Заказы на покупку» рассматривает процесс, необходимый для создания и управления заказами на покупку в Dynamics 365 for Finance and Operations. Компания использует заказы на покупку для записи информации о товарах и услугах, которые она покупает у различных поставщиков.
   #### Уроки
   - Введение
@@ -326,7 +326,7 @@ outlineSection: |-
   Прежде, чем вы сможете использовать мобильное устройство для управления складом, необходимо установить приложение. В этом разделе объясняется, как использовать процессы управления складом в Финансах и Операциях.
   #### Уроки
   - Введение
-  - Конфигурация мобильных устройств
+  - Конфигурация мобильных  устройством
   - Входящие операции
   - Подсчет циклов
   - Переводы и пополнение
@@ -371,3 +371,4 @@ outlineSection: |-
   - Опрос после курса
 
   Вы закончили курс.
+
