--- a/learn-certs-pr/courses/mb-700t00.yml
+++ b/learn-certs-pr/courses/mb-700t00.yml
@@ -5,7 +5,20 @@ metadata:
   description: 'Course MB-700T00-A: Microsoft Dynamics 365: Finance and Operations Apps Solution Architect'
 uid: course.mb-700t00
 courseNumber: 'MB-700T00-A'
-hoursToComplete: 120
+hoursToComplete: 72
+skillsGained:
+- skill: Определение области навыков для роли архитектора решений
+- skill: Объяснение рекомендаций и примеров моделей развертывания Microsoft
+- skill: Понимание облачных решений, CDM и CDS
+- skill: Получение дополнительной информации о лицензировании, AppSource и поддержке для Dynamics 365
+- skill: Использование сервисов жизненного цикла в качестве архитектора решения
+- skill: Знание рекомендаций для создания решения Dynamics 365 с помощью Blueprint
+- skill: Понимание концепций и инструментов, используемых для управления данными
+- skill: Умение объяснить варианты интеграции и бизнес-события на решениях
+- skill: Знание доступных вариантов локализации решения, соответствия и отчетности
+- skill: Умение вести архитектурные беседы о расширяемости, безопасности и производительности
+- skill: Знание значения управления жизненным циклом приложений ALM
+- skill: Определение возможностей для автоматического тестирования и использования RSAT
 iconUrl: /media/learn/certification/course.svg
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
@@ -18,4 +31,44 @@ products:
 - dynamics
 exams:
 - uid: exam.mb-700
-summary: ""
+summary: |-
+  Этот курс разработан для тех, кто стремится стать или только начал изучать роль архитектора решений. Этот курс предоставляет техническую информацию об архитектуре приложения и технических навыках, которые позволяют начать свой путь к освоению этой роли. Этот курс не охватывает производственные навыки и навыки доставки, необходимые для этой роли.
+
+  #### Профиль аудитории
+
+  Слушатели этого курса должны иметь предыдущий опыт работы с функциональной или технической направленностью в Dynamics 365&#58; Finance and Operations Applications (приложения для финансов и операций). В первую очередь для тех, кто стремится стать или только начал изучать роль архитектора решений.  
+prerequisitesSection: |-
+  Для того, чтобы освоить роль архитектора решений вы должны пройти следующую программу обучения&#58; [Здесь](https://docs.microsoft.com/learn/browse/?roles=solution-architect&products=dynamics-finance-operations)
+outlineSection: |-
+  ### Модуль 1&#58; Введение
+
+  ### Модуль 2&#58; Роль архитектора
+
+  ### Модуль 3&#58; Среда, экземпляры и модели развертывания
+
+  ### Модуль 4&#58; Облачное решение, CDM и CDS
+
+  ### Модуль 5&#58; Лицензирование, AppSource и поддержка
+
+  ### Модуль 6&#58; Службы жизненного цикла 
+
+  ### Модуль 7&#58; Решения Blueprinting Dynamics 365
+
+  ### Модуль 8&#58; Управление данными
+
+  ### Модуль 9&#58; Интеграция и деловые мероприятия
+
+  ### Модуль 10&#58; Локализация, соответствие и отчетность
+
+  ### Модуль 11&#58; Расширяемость
+
+  ### Модуль 12&#58; Безопасность
+
+  ### Модуль 13&#58; Производительность
+
+  ### Модуль 14&#58; Управление жизненным циклом приложения 
+
+  ### Модуль 15&#58; Автоматизированное тестирование и RSAT
+
+  ### Модуль 16&#58; Дополнительные сферы для архитекторов
+
