--- a/learn-certs-pr/courses/ms-500t00.yml
+++ b/learn-certs-pr/courses/ms-500t00.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Course
+### YamlMime:Course
 title: Microsoft 365 Security Administration
 metadata:
   title: 'Course MS-500T00-A: Microsoft 365 Security Administration'
@@ -89,7 +89,7 @@ outlineSection: |-
   - Включите защиту личных данных Azure Identity Protection
 
 
-  ### Модуль  2&#58; Синхронизация личных данных
+  ### Модуль 2&#58; Синхронизация личных данных
   Этот модуль объясняет понятия, связанные с синхронизацией удостоверений для Microsoft 365.  В частности, он фокусируется на Azure AD Connect и управлении синхронизацией каталогов, чтобы гарантировать, что к вашей системе Microsoft 365 подключаются те, кому положено.
   #### Уроки
   - Введение в синхронизацию личных данных
@@ -112,12 +112,12 @@ outlineSection: |-
   - Опишите объединение Active Directory.
 
 
-  ### Модуль  3&#58; Управление доступом
+  ### Модуль 3&#58; Управление доступом
   В этом модуле объясняется условный доступ к Microsoft 365 и его использование для управления доступом к ресурсам в вашей организации. Модуль также объясняет управление доступом на основе ролей (RBAC) и решения для внешнего доступа.
   #### Уроки
   - Условный доступ
   - Управление доступом к устройству
-  - Ролевое управление доступом (RBAC)
+  -  контроля доступа на основе ролей (RBAC)
   - Решения для внешнего доступа
 
 
@@ -133,7 +133,7 @@ outlineSection: |-
   - Настройка контроля доступа на основе ролей
 
 
-  ### Модуль  4&#58; Безопасность Microsoft 365
+  ### Модуль 4&#58; Безопасность Microsoft 365
   Этот модуль объясняет различные существующие угрозы кибератак.  Затем он знакомит вас с решениями Microsoft, которые используются для уменьшения этих угроз.  Модуль завершается объяснением Microsoft Secure Score и того, как его можно использовать для оценки безопасности вашей организации и составления отчетов о ней.
   #### Уроки
   - Векторы угроз и нарушения данных
@@ -153,7 +153,7 @@ outlineSection: |-
   - Опишите, как использовать Secure Score для выявления пробелов в вашем текущем состоянии безопасности Microsoft 365.
 
 
-  ### Модуль  5&#58; Расширенная защита Advanced Threat Protection
+  ### Модуль 5&#58; Расширенная защита Advanced Threat Protection
   Этот модуль объясняет различные технологии и службы защиты от угроз, доступные для Microsoft 365. Модуль охватывает защиту сообщений с помощью Exchange Online Protection, расширенную защиту от угроз Azure и расширенную защиту от угроз Windows Defender.
   #### Уроки
   - Exchange Online Protection
@@ -192,12 +192,12 @@ outlineSection: |-
   - Описать, как Threat Explorer можно использовать для расследования угроз и помощи в защите вашего клиента.
   - Опишите, как панель безопасности дает руководителям уровня C понимание основных рисков и тенденций.
   - Описать, что такое Advanced Thread Analytics (ATA) и какие требования необходимы для его развертывания.
-  - Настроить расширенную аналитику угроз.
+  - Настройка расширенного анализа угроз.
   - Используйте симулятор атаки в Microsoft 365.
   - Опишите, как Azure Sentinel можно использовать для Microsoft 365.
 
 
-  ### Модуль  7&#58; Мобильность
+  ### Модуль 7&#58; Мобильность
   Этот модуль ориентирован на защиту мобильных устройств и приложений.  Вы узнаете об управлении мобильными устройствами и о том, как оно работает с Microsoft Intune. Вы также узнаете, как Intune и Azure AD можно использовать для защиты мобильных приложений.
   #### Уроки
   - Планирование управления мобильными приложениями
@@ -221,7 +221,7 @@ outlineSection: |-
   - Настраивать роль диспетчера регистрации устройств.
 
 
-  ### Модуль  8&#58; Защита информации
+  ### Модуль 8&#58; Защита информации
   В модуле объясняется, как реализовать защиту информации Azure и защиту информации Windows.
   #### Уроки
   - Концепции защиты информации
@@ -258,7 +258,7 @@ outlineSection: |-
   - Опишите и включите шифрование сообщений Office 365.
 
 
-  ### Модуль  10&#58; Предотвращение потери данных
+  ### Модуль 10&#58; Предотвращение потери данных
   Этот модуль посвящен предотвращению потери данных в Microsoft 365.  Вы узнаете, как создавать политики, редактировать правила и настраивать пользовательские уведомления для защиты ваших данных.
   #### Уроки
   - Объяснение предотвращения потери данных (DLP)
@@ -281,7 +281,7 @@ outlineSection: |-
   - Объяснить, как SharePoint Online создает свойства для обхода из документов.
 
 
-  ### Модуль  11&#58; Безопасность облачных приложений
+  ### Модуль 11&#58; Безопасность облачных приложений
   Этот модуль посвящен безопасности облачных приложений в Microsoft 365.  Модуль объяснит обнаружение облака, коннекторы приложений, политики и оповещения. Вы узнаете, как эти функции работают для защиты ваших облачных приложений.
   #### Уроки
   - Объяснение безопасности облачных приложений
@@ -314,7 +314,7 @@ outlineSection: |-
   - Исправьте политики хранения, которые не работают должным образом.
 
 
-  ### Модуль  13&#58; Архивирование и хранение
+  ### Модуль 13&#58; Архивирование и хранение
   Этот модуль объясняет понятия, связанные с хранением и архивированием данных для Microsoft 365, включая Exchange и SharePoint.
 
   #### Уроки
@@ -358,3 +358,4 @@ outlineSection: |-
   - Вводить критерии поиска в журнале аудита.
   - Описать расширенное обнаружение электронных данных eDiscovery в Microsoft 365.
   - Просмотр журнала событий eDiscovery.
+
