--- a/learn-certs-pr/courses/pl-900t00.yml
+++ b/learn-certs-pr/courses/pl-900t00.yml
@@ -7,6 +7,13 @@ uid: course.pl-900t00
 courseNumber: 'PL-900T00-A'
 hoursToComplete: 48
 iconUrl: /media/learn/certification/course.svg
+skillsGained:
+- skill: 'Описание компонентов Power Platform: Power Apps, Power BI и Microsoft Automate'
+- skill: 'Описание компонентов Power Platform: Общая служба данных, коннекторы и AI Builder'
+- skill: Описание кросс-облачных сценариев для M365, Dynamics 365, Microsoft Azure и сторонних служб
+- skill: Определение преимуществ и возможностей Power Platform
+- skill: Определение основных функциональных возможностей и ценность для бизнеса.
+- skill: Реализация простых решений с помощью приложений Microsoft Automate, Power BI и Power.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -18,7 +25,11 @@ products:
 - power-platform
 exams:
 - uid: exam.pl-900
-summary: ""
+summary: |-
+  Узнайте о ценности для бизнеса и возможностях продукта Power Platform. Научитесь создавать простой PowerApp, подключать данные к CDS, создавать панель мониторинга Power BI и автоматизировать процессы с помощью Microsoft Flow.
+
+  #### Профиль аудитории
+  Кандидатами на этот экзамен являются пользователи, которые стремятся повысить производительность труда, автоматизируя бизнес-процессы, анализируя данные для получения бизнес-аналитики и действуя более эффективно, создавая простые приложения.
 prerequisitesSection: |-
   Для этого курса нет предварительных условий
 outlineSection: |-
@@ -27,7 +38,7 @@ outlineSection: |-
   #### Уроки
   - Обзор Power Platform
   - Краткое содержание модуля
-  
+
   Изучите компоненты и возможности Power Platform
   - Определите, когда использовать каждое компонентное приложение Power Platform для создания бизнес-решений.
   - Узнайте, как использовать Power Platform для создания бизнес-решений.
@@ -38,16 +49,18 @@ outlineSection: |-
   - Обзор приложений Power Apps
   - Как создать решение для приложения
 
+
   #### Лабораторная &#58; Как создать базовое приложение Canvas 1
   - Создать приложение Staff Canvas
   - Завершите приложение
-  
+
   #### Лабораторная &#58; Как создать базовое приложение Canvas 2
   - Создать приложение Security Canvas
 
   Узнайте о том, что Power Apps и его ценность для бизнеса
   - Узнайте, как другие организации оцифровывают свои процессы с помощью Power Apps
   - Посмотрите на Power Apps в действии и изучайте варианты создания своего первого приложения
+
 
   ### Модуль 3&#58; Введение в общую службу данных Common Data Service
   Служба общих данных позволяет вам углубляться в мощные, масштабируемые решения для обработки данных в облаке. Узнайте, что делает Common Data Service привлекательным и как она может работать с Power Platform для создания уникальных и эффективных бизнес-решений.
@@ -60,7 +73,7 @@ outlineSection: |-
   - Создайте среду и решение
   - Создайте сущности и отношения
   - Импортируйте данные
-  
+
   Объясните, какие среды, объекты, поля и отношения находятся в общей службе данных
   - Опишите разницу между службой Common Data Service и моделью Common Data Model
   - Объясните варианты использования и ограничения бизнес-правил и процессов
@@ -93,3 +106,4 @@ outlineSection: |-
   Опишите коммерческую ценность и возможности Power BI
   - Посмотрите, как Power BI работает и выглядит с точки зрения пользователя
   - Узнайте, как создать простую панель управления Power BI
+
