--- a/learn-certs-pr/d365-fundamentals.yml
+++ b/learn-certs-pr/d365-fundamentals.yml
@@ -6,15 +6,17 @@ metadata:
 uid: certification.d365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
-  Этот экзамен позволяет оценить ваши знания в следующем: Microsoft Dynamics 365; искусственный интеллект (ИИ); гибридная реальность (MR);  Power Platform; облачные концепции; облачная безопасность; безопасность Dynamics 365; Common Data Service; отчеты в Dynamics 365; интеграции в Dynamics 365; и облачные развертывания.
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+
+  Этот экзамен позволяет оценить ваши знания в следующем&#58; Microsoft Dynamics 365; искусственный интеллект; гибридная реальность;  Power Platform; облачные концепции; облачная безопасность; безопасность Dynamics 365; Common Data Service; отчеты в Dynamics 365; интеграции в Dynamics 365; и облачные развертывания.
 subTitle: 'Этот экзамен позволяет оценить ваши знания в следующем: Microsoft Dynamics 365; искусственный интеллект (AI); гибридная реальность (MR);  Power Platform; облачные концепции; облачная безопасность; безопасность Dynamics 365; Common Data Service; отчеты в Dynamics 365; интеграции в Dynamics 365; и облачные развертывания.'
 levels:
 - beginner
 skills:
 - Определение компонентов платформы Microsoft для Dynamics 365
-- Понимание ИИ и гибридной реальности для Dynamics 365
-- Понимание приложений на основе моделей
-- Понимание приложения Dynamics 365 Finance and Operations
+- Описание искусственного интеллекта и смешанной реальности в Dynamics 365
+- Описание управляемых моделями приложений
+- Описание приложений для финансов и операций
 roles:
 - functional-consultant
 type: fundamentals
@@ -31,7 +33,7 @@ resources:
 - title: Обучение для получения сертификата
   description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4pHPx
-- title: Руководство по обучению и сертификации
+- title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
@@ -46,3 +48,4 @@ resources:
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
