--- a/learn-certs-pr/exams/70-339.yml
+++ b/learn-certs-pr/exams/70-339.yml
@@ -6,8 +6,11 @@ metadata:
 uid: exam.70-339
 displayName: 70-339
 summary: |-
-  <div style='color&#58; red;'>ЭКЗАМЕН БЫЛ ОТМЕНЕН 30 Июнь 2020 года. Экзамен для замены может быть доступен. To learn more, visit our blog&#58; <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> and review our Exam Retirement posts. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><strong>Этот экзамен будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. После этой даты вы уже сможете сдавать этот экзамен. Узнайте больше о <a href='/learn/certifications/retired-certification-exams'>предстоящих отменах экзаменов</a>.<br/><br/></strong></div>.
+  </div>
+
   Этот экзамен предназначен для опытных ИТ-специалистов, имеющих навыки установки, настройки, развертывания и управления установленными экземплярами SharePoint 2016 в центре обработки данных и в облаке. Кандидаты, как правило, имеют более 4-х лет опыта планирования и обслуживания SharePoint и других основных технологий, от которых зависит SharePoint, включая Windows Server 2008 R2 или более поздней версии, Internet Information Services (IIS), SQL Server 2008 R2 или более поздней версии, Active Directory и служб сетевой инфраструктуры.
 
   Кандидаты также должны иметь опыт управления непрерывностью бизнеса, включая резервное копирование и восстановление данных и обеспечение высокой доступности, а также опыт работы с технологиями безопасности и проверки подлинности. Большим преимуществом является опыт работы с PowerShell.
@@ -27,10 +30,10 @@ locales:
 - de
 - ja
 - pt-br
-levels: 
+levels:
 - intermediate
 skills:
-- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- 'Примечание: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Проектирование инфраструктуры SharePoint (15–20%)
 - Планирование проверки подлинности и безопасности (15–20%)
 - Планирование оптимизации рабочей нагрузки (15–20%)
@@ -38,6 +41,7 @@ skills:
 - Управление возможностями поиска (10–15%)
 - Планирование и настройка облачных служб (5–10%)
 - Мониторинг и оптимизация среды SharePoint (10–15%)
+retirementDate: 01/31/2021
 roles:
 - administrator
 products:
@@ -61,3 +65,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
