--- a/learn-certs-pr/exams/70-345.yml
+++ b/learn-certs-pr/exams/70-345.yml
@@ -6,8 +6,11 @@ metadata:
 uid: exam.70-345
 displayName: 70-345
 summary: |-
-  <div style='color&#58; red;'>ЭКЗАМЕН БЫЛ ОТМЕНЕН 30 Июнь 2020 года. Экзамен для замены может быть доступен. Чтобы узнать больше, посетите наш блог&#58; <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> и просмотрите наши объявления об экзаменах. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><strong>Этот экзамен будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. После этой даты вы уже сможете сдавать этот экзамен. Узнайте больше о <a href='/learn/certifications/retired-certification-exams'>предстоящих отменах экзаменов</a>.<br/><br/></strong></div>.
+  </div>
+
   Кандидаты на прохождения этого экзамена — IT-консультанты или старшие администраторы, которые могут выполнять роль технического руководителя отдела администраторов. Кандидатам должны быть хорошо известны требования для интеграции Microsoft Exchange Server со Skype для бизнеса и Office 365.
 
   У кандидатов должен быть опыт проектирования серверов Exchange и управления ими, поддержки среды обмена сообщениями Exchange 2016 в корпоративной среде не менее трех лет.
@@ -25,16 +28,17 @@ locales:
 - de
 - ja
 - pt-br
-levels: 
+levels:
 - advanced
 skills:
-- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- 'Примечание: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Планирование, развертывание, управление и устранение неполадок в базах данных почтовых ящиков (15-20%)
 - Планирование, развертывание, управление, поиск и устранение неполадок в службах клиентского доступа (15-20%)
 - Планирование, развертывание, управление и устранение неполадок в службах транспорта (15-20%)
 - Планирование, развертывание, и управление инфраструктурой, получателями и системой безопасности Exchange (15-20%)
 - Планирование, развертывание и управление соответствием требованиям, архивацией, eDiscovery и аудитом (10-15%)
 - Внедрение и управление сосуществованием, гибридными сценариями, миграцией и объединением (10-15%)
+retirementDate: 01/31/2021
 roles:
 - administrator
 products:
@@ -58,3 +62,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
