--- a/learn-certs-pr/exams/az-103.yml
+++ b/learn-certs-pr/exams/az-103.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Microsoft Azure Administrator
 metadata:
   title: 'Exam AZ-103: Microsoft Azure Administrator'
@@ -6,18 +6,23 @@ metadata:
 uid: exam.az-103
 displayName: AZ-103
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-104, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 31 МАРТ 2020 ГОДА. Вы сможете сдать этот экзамен до его отмены, которая состояится ориентировочно 30 июня 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА,<a href="/learn/certifications/exams/az-104">AZ-104</a>, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 2 АПРЕЛЕ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 31 августа 2020. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
+  </div>
+
   Начиная с 1 мая 2019 года, вам нужно сдать только Exam AZ-103, чтобы получить этот сертификат. Этот новый экзамен сочетает в себе навыки, охватываемые AZ-100 и AZ-101 (которые заканчиваются 1 мая 2019 года), при этом большая часть нового экзамена поступила от AZ-100.
 
   Кандидатами на этот экзамен являются Azure Administrators, которые управляют облачными службами, которые охватывают возможности хранения, безопасности, сетей и вычислений в облаке. Кандидаты имеют глубокое понимание каждой службы в течение всего жизненного цикла IT и принимают запросы на инфраструктурные услуги, приложения и среды. Они дают рекомендации по использованию услуг для обеспечения оптимальной производительности и масштаба, а также обеспечения, размера, контроля и корректировки ресурсов по мере необходимости.
 
   Кандидаты на этот экзамен должны обладать навыками использования PowerShell, интерфейса командной строки, портала Azure, шаблонов ARM, операционных систем, виртуализации, облачной инфраструктуры, структур хранения и сетей.
+
+  <div style='font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; После прохождении этого экзамена вы получите следующий сертификат&#58; <a href="/learn/certifications/azure-administrator">Microsoft Certified&#58; Azure Administrator Associate</a>.</div>
 subTitle: 'Начиная с 1 мая 2019 года, вам нужно сдать только Exam AZ-103, чтобы получить этот сертификат. Этот новый экзамен сочетает в себе навыки, охватываемые AZ-100 и AZ-101 (которые заканчиваются 1 мая 2019 года), при этом большая часть нового экзамена поступила от AZ-100. Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: управление подписками и ресурсами Azure, реализация и управление хранилищем, развертывание и управление виртуальными машинами (VМ), настройка и управление виртуальными сетями, а также управление идентификационными данными.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUR
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-103?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-103&examname=Exam%20AZ-103:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-103
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-103&examname=Exam%20AZ-103:%20Microsoft%20Azure%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-103
 locales:
 - en
 - ja
@@ -26,13 +31,14 @@ locales:
 levels:
 - intermediate
 skills:
-- НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-104, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 31 март 2020 ГОДА. Вы сможете сдать этот экзамен до его отмены, которая состояится ориентировочно 30 июня 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
+- НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-104, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 2 АПРЕЛЕ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 31 августа 2020. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать подробную информацию об изменениях.
 - 'Примечание: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Управление подписками и ресурсами Azure (15-20%)
 - Внедрение и управление хранилищем (15-20%)
 - Развертывание виртуальных машин (VMs) (15-20%)
 - Настройка и управление виртуальными сетями (30-35%)
 - Управление идентификационными данными (15-20%)
+retirementDate: 08/31/2020
 roles:
 - administrator
 products:
@@ -58,7 +64,7 @@ paths:
 - uid: learn.administer-containers-in-azure
 relatedCertifications:
 - related:
-    uid: certification.azure-administrator
+    uid: none
 resources:
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
@@ -81,3 +87,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
