--- a/learn-certs-pr/exams/az-203.yml
+++ b/learn-certs-pr/exams/az-203.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Developing Solutions for Microsoft Azure
 metadata:
   title: 'Exam AZ-203: Developing Solutions for Microsoft Azure'
@@ -6,8 +6,11 @@ metadata:
 uid: exam.az-203
 displayName: AZ-203
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href="/learn/certifications/exams/az-204">AZ-204</a>, СТАЛА ДОСТУПНОЙ С 24 ФЕВРАЛЯ. Вы сможете сдать этот экзамен до 31 мая 2020 года. Примечание&#58; Экзамен будет отменен в 23:59 по центральному стандартному времени<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href="/learn/certifications/exams/az-204">AZ-204</a>, СТАЛА ДОСТУПНОЙ С 24 ФЕВРАЛЯ. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 31 августа 2020. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
+  </div>
+
   Кандидатами на этот экзамен являются разработчики Azure, которые разрабатывают и внедряют облачные решения, такие как приложения и сервисы. Они участвуют на всех этапах разработки, от проектирования решений до разработки и развертывания, до тестирования и обслуживания. Они взаимодействуют с архитекторами облачных решений, администраторами облачных баз данных, администраторами облаков и клиентами для реализации решения.
   <br/>
 
@@ -15,7 +18,7 @@ summary: |-
 
   Кандидаты должны иметь по крайней мере один год опыта разработки масштабируемых решений на всех этапах разработки программного обеспечения и быть опытными по крайней мере в одном поддерживаемом облаком языке программирования.
 
-  <div style='color&#58; red; font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; После прохождении этого экзамена вы получите следующий сертификат&#58; <a href="https://docs.microsoft.com/learn/certifications/azure-developer">Microsoft Certified&#58; Azure Developer Associate</a>.</div>
+  <div style='font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; После прохождении этого экзамена вы получите следующий сертификат&#58; <a href="https://docs.microsoft.com/learn/certifications/azure-developer">Microsoft Certified&#58; Azure Developer Associate</a>.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: разрабатывать вычислительные решения Azure; разрабатывать вычислительные решения Azure Platform; развивать хранилище Azure; внедрять безопасность Azure; отслеживать, устранять неисправности и оптимизировать решения; подключаться и использовать службы Azure , а также и сторонние службы.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHC
@@ -25,19 +28,19 @@ locales:
 - zh-cn
 - ko
 providers:
-  - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-203&examname=Exam%20AZ-203:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-203
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-203&examname=Exam%20AZ-203:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-203
 levels:
 - intermediate
 skills:
-- НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-204, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 24 Февраль 2020 ГОДА. Вы сможете сдать этот экзамен до 31 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
+- НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-204, СТАЛА ДОСТУПНОЙ С 24 ФЕВРАЛЯ. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 31 августа 2020. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать подробную информацию об изменениях.
 - Разработка инфраструктуры Azure как сервиса вычислительных служб (10-15%)
 - Разрабатывать Azure Platform как службу вычислительных решений (20-25%)
 - Разработка хранилища Azure (15-20%)
 - Внедрение безопасности Azure (10-15%)
 - Мониторинг, устранение неполадок и оптимизация решений (10-15%)
-- Подключение и использование служб Azure и сторонних служб (20-25%)
-retirementDate: 05/31/2020
+- Подключение и использование Azure и сторонних служб (20-25%)
+retirementDate: 08/31/2020
 roles:
 - developer
 products:
@@ -96,3 +99,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
