--- a/learn-certs-pr/exams/dp-201.yml
+++ b/learn-certs-pr/exams/dp-201.yml
@@ -1,24 +1,16 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Designing an Azure Data Solution
 metadata:
   title: 'Exam DP-201: Designing an Azure Data Solution'
   description: 'Exam DP-201: Designing an Azure Data Solution'
 uid: exam.dp-201
 displayName: DP-201
-summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 26 марта 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
-  
-  Кандидатами на этот экзамен являются инженеры по работе с данными Microsoft Azure, которые совместно с представителями бизнеса определяют и выполняют требования к данным для проектирования решений по работе с данными, использующих службы данных Azure.
-  <br/>
-
-  Инженеры данных Azure отвечают за задачи, проектных связанные с данными, включая разработку решений для хранения данных Azure, использующих реляционные и нереляционные хранилища данных, решения для пакетной обработки данных и обработки данных в реальном времени, а также решения для обеспечения безопасности и соответствия требованиям.
-
-  Кандидаты на этот экзамен должны уметь разработать решения для данных, использующие следующие службы Azure&#58; Azure Cosmos DB, Azure SQL Database, Azure Synapse Analytics, Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks, и хранилище BLOB-объектов Azure.
+summary: "<div>\r\n<div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>  \r\n<div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 26 март 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>\r\n</div>\r\n\r\nКандидатами на этот экзамен являются инженеры по работе с данными Microsoft Azure, которые совместно с представителями бизнеса определяют и выполняют требования к данным для проектирования решений по работе с данными, использующих службы данных Azure.\r\n\r\nИнженеры данных Azure отвечают за задачи, проектных связанные с данными, включая разработку решений для хранения данных Azure, использующих реляционные и нереляционные хранилища данных, решения для пакетной обработки данных и обработки данных в реальном времени, а также решения для обеспечения безопасности и соответствия требованиям.\r\n\r\nКандидаты на этот экзамен должны уметь разработать решения для данных, использующие следующие службы Azure&#58; Azure Cosmos DB, Azure SQL Database, Azure Synapse Analytics, Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks, и хранилище BLOB-объектов Azure."
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: разработка решений для хранения данных Azure; решения для обработки проектных данных; и проектирование для обеспечения безопасности данных и соответствия требованиям.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VRMb
 practiceTestUrl: https://us.mindhub.com/p/MU-DP-201?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=DP-201&examname=Exam%20DP-201:%20Designing%20an%20Azure%20Data%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-201
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=DP-201&examname=Exam%20DP-201:%20Designing%20an%20Azure%20Data%20Solution&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-201
 locales:
 - en
 - ja
@@ -27,7 +19,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 26 марта 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
+- Содержание этого экзамена было обновлено 26 март 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.
 - 'Примечание: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Разработка решений для хранения данных Azure (40-45%)
 - Решения для обработки проектных данных (25-30%)
@@ -83,3 +75,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
