--- a/learn-certs-pr/exams/mb-220.yml
+++ b/learn-certs-pr/exams/mb-220.yml
@@ -6,8 +6,11 @@ metadata:
 uid: exam.mb-220
 displayName: MB-220
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Содержание этого экзамена будет обновлено в апреле 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, Чтобы узнать больше..<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 19 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
+
   Кандидатами на этот экзамен являются функциональные консультанты Microsoft Dynamics 365 по привлечению клиентов с опытом в маркетинге. Кандидаты отвечают за внедрение решений, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.
 
   Кандидаты несут ответственность за настройку и расширение основного маркетингового приложения, чтобы включить в него маркетинг по электронной почте, настройку, интерактивные поездки клиентов, "обработка" лидов с персонализированным опытом, интеграция с LinkedIn, Events, Voice of the Customer, целевые страницы, сегментация и оценка, а также соблюдение Генерального регламента о защите персональных данных (GDPR).
@@ -22,8 +25,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено в апреле 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, Чтобы узнать больше.
-- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- Содержание этого экзамена будет обновлено 19 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
 - Настройка маркетинговых приложений (5-10%)
 - Управление сегментами и списками (10-15%)
 - Создание и управление маркетинговыми формами и страницами (10-15%)
@@ -34,7 +36,7 @@ skills:
 - Настройка и анализ ответов клиентов (10-15%)
 roles:
 - functional-consultant
-products: 
+products:
 - dynamics
 - dynamics-marketing
 exams:
@@ -53,7 +55,7 @@ resources:
 - title: Обучение для получения сертификата
   description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I7b
-- title: Руководство по обучению и сертификации
+- title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
@@ -74,3 +76,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
