--- a/learn-certs-pr/d365-functional-consultant-marketing.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing.yml
@@ -2,10 +2,13 @@
 title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate'
-  description: Обладатели сертификата Microsoft Dynamics 365 для функциональных консультантов по маркетингу реализуют решения, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.
+  description: 'Обладатели сертификата Microsoft Dynamics 365 для функциональных консультантов по маркетингу реализуют решения, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.'
 uid: certification.d365-functional-consultant-marketing
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Обладатели сертификата Microsoft Dynamics 365 для функциональных консультантов по маркетингу реализуют решения, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.
+summary: |-
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+
+  Обладатели сертификата Microsoft Dynamics 365 для функциональных консультантов по маркетингу реализуют решения, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.
 subTitle: Обладатели сертификата Microsoft Dynamics 365 для функциональных консультантов по маркетингу реализуют решения, которые привлекают и конвертируют лидов, повышают узнаваемость бренда, стандартизируют многоканальный обмен сообщениями и предоставляют маркетинговые идеи.
 levels:
 - intermediate
@@ -48,7 +51,7 @@ exams:
 - uid: exam.mb-220
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Marketing Functional Consultant Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I7b
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
@@ -56,12 +59,13 @@ resources:
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Повтор экзамена
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: deals.md
 - title: Поддержка по вопросам сертификации
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
