--- a/learn-certs-pr/exams/70-333.yml
+++ b/learn-certs-pr/exams/70-333.yml
@@ -6,8 +6,10 @@ metadata:
 uid: exam.70-333
 displayName: 70-333
 summary: |-
-  <div style='color&#58; red;'>ЭКЗАМЕН БЫЛ ОТМЕНЕН 30 Июнь 2020 года. Экзамен для замены может быть доступен. Чтобы узнать больше, посетите наш блог&#58; <a href="https://www.microsoft.com/en-us/learning/community.aspx">https://www.microsoft.com/en-us/learning/community.aspx</a> и просмотрите наши объявления об экзаменах. Примечание&#58; Экзамен будет отменен в 23&#58;59 по центральному стандартному времени<br/><br/></div>
-  
+  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div><strong>Этот экзамен будет отменен 31 января 2021 года в 23&#58;59 по центральному времени. После этой даты вы уже сможете сдавать этот экзамен. Узнайте больше о <a href='/learn/certifications/retired-certification-exams'>предстоящих отменах экзаменов</a>.<br/><br/></strong></div>.
+  </div>
+
   Кандидатами на прохождение этого экзамена являются ИТ-консультанты и специалисты по консалтингу в сфере телекоммуникаций, которые проектируют, планируют, развертывают и обслуживают решения для объединенных коммуникаций (UC). Кандидаты должны быть способны построить техническую архитектуру в соответствии с бизнес-требованиями и спроектировать решение для объединенных коммуникаций. Кандидаты должны иметь не менее двух лет практического опыта работы с технологиями Skype для бизнеса и должны знать поддерживаемые сценарии миграции. Кандидаты должны иметь профессиональные навыки в развертывании решений Skype для бизнеса Server и Skype для бизнеса Online для конечных пользователей, устройств в конечных точках, телефонии, аудио-/видео- и веб-конференций, обеспечении безопасности и высокой доступности. Кроме того, кандидаты должны знать, как выполнять мониторинг, поиск и устранение неполадок решений Skype для бизнеса с помощью инструментов корпорации Microsoft. В дополнение к этому, кандидаты должны иметь профессиональные навыки в работе со службами Active Directory Domain Services, сетями передачи данных, стандартами телекоммуникаций и компонентами, поддерживающими конфигурацию Skype для бизнеса. Кандидатам должны быть хорошо известны требования к интеграции решений Skype для бизнеса с Microsoft Exchange Server и Office 365.
 subTitle: Кандидатами на прохождение этого экзамена являются ИТ-консультанты и специалисты по консалтингу в сфере телекоммуникаций, которые проектируют, планируют, развертывают и обслуживают решения для объединенных коммуникаций (UC). Кандидаты должны быть способны построить техническую архитектуру в соответствии с бизнес-требованиями и спроектировать решение для объединенных коммуникаций. Кандидаты должны иметь не менее двух лет практического опыта работы с технологиями Skype для бизнеса и должны знать поддерживаемые сценарии миграции. Кандидаты должны иметь профессиональные навыки в развертывании решений Skype для бизнеса Server и Skype для бизнеса Online для конечных пользователей, устройств в конечных точках, телефонии, аудио-/видео- и веб-конференций, обеспечении безопасности и высокой доступности. Кроме того, кандидаты должны знать, как выполнять мониторинг, поиск и устранение неполадок решений Skype для бизнеса с помощью инструментов корпорации Microsoft. В дополнение к этому, кандидаты должны иметь профессиональные навыки в работе со службами Active Directory Domain Services, сетями передачи данных, стандартами телекоммуникаций и компонентами, поддерживающими конфигурацию Skype для бизнеса. Кандидатам должны быть хорошо известны требования к интеграции решений Skype для бизнеса с Microsoft Exchange Server и Office 365.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -17,13 +19,14 @@ scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=3
 locales:
 - en
 - ja
-levels: 
+levels:
 - advanced
 skills:
-- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
-- Планирование и управлени Skype for Business Enterprise Voice.
+- 'Примечание: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- Планирование и управлени Skype for Business Enterprise Voice (30-35%)
 - Развертывание и настройка корпоративной голосовой связи (30-35%)
 - управления и устранения корпоративная голосовая (30-35%)
+retirementDate: 01/31/2021
 roles:
 - administrator
 products:
@@ -46,3 +49,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
