--- a/learn-certs-pr/exams/az-204.yml
+++ b/learn-certs-pr/exams/az-204.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Developing Solutions for Microsoft Azure (beta)
 metadata:
   title: 'Exam AZ-204: Developing Solutions for Microsoft Azure (beta)'
@@ -6,25 +6,30 @@ metadata:
 uid: exam.az-204
 displayName: AZ-204
 summary: |-
+  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 18 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
+
   Кандидатами на этот экзамен являются облачные разработчики, которые участвуют на всех этапах разработки, от определения требований и проектирования до разработки, развертывания и обслуживания. Они взаимодействуют с облачных DBA, администраторами облачных, и клиентами для реализации решения.
-  
+
   Кандидаты должны хорошо владеть SDK Azure, уверенно знать параметры хранения данных, осуществлять подключения к данным, API, аутентификацию и авторизацию приложений, развертывание вычислений и контейнеров, отладку, настройку производительностиь и мониторинг.
   <br/>
-  
+
   Кандидаты должны иметь не менее 1-2 лет опыта разработки на профессиональном уровне и опыт работы с Microsoft Azure. Они также должны уметь программировать на поддерживаемом языке Azure.
-  
-  <div style='color&#58; red;'><br/>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href="/learn/certifications/certification-exams#participating-in-beta-exams">ценности и важности бета-версий экзаменов</a>.</div>
+
+  <div><br/><strong>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href="/learn/certifications/certification-exams#participating-in-beta-exams">ценности и важности бета-версий экзаменов</a>.</strong></div>
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: разработка Azure вычислительных служб; разработка для службы хранилища Azure; внедрение безопасности Azure; мониторинг, устранение неполадок и оптимизация решений; а также подключение и использование служб Azure и сторонних служб.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oZ7B
 locales:
 - en
 providers:
-  - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-204&examname=Exam%20AZ-204:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-204
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-204&examname=Exam%20AZ-204:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-204
 levels:
 - intermediate
 skills:
+- Содержание этого экзамена будет обновлено 18 мая 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Develop Azure compute solutions (25-30%)
 - Разработка хранилища Azure (10-15%)
 - Внедрение безопасности Azure (15-20%)
@@ -99,3 +104,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
