--- a/learn-certs-pr/exams/az-300.yml
+++ b/learn-certs-pr/exams/az-300.yml
@@ -6,8 +6,11 @@ metadata:
 uid: exam.az-300
 displayName: AZ-300
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-303, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 28 АПРЕЛЯ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 28 июля 2020. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, <a href="/learn/certifications/exams/az-303">AZ-303</a>, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 29 ИЮНЯ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 30 сентября 2020.<br/><br/>Помимо этого содержание данного экзамена будет обновлено 2 июня 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
+
   Кандидатами на этот экзамен являются архитекторы решений Azure, которые консультируют заинтересованные стороны и преобразуют бизнес-требования в безопасные, масштабируемые и надежные решения. Кандидаты должны обладать передовым опытом и знаниями по различным аспектам ИТ-операций, включая создание сетей, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, управление данными, бюджетирование и управление. Эта роль требует управления тем, как решения в каждой области влияют на общее решение. Кандидаты должны обладать знаниями в области управления Azure, разработки Azure и DevOps и обладать навыками на уровне экспертов по крайней мере в одном из этих доменов.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: развертывание и настройка инфраструктуры; внедрение рабочих нагрузок и безопасности; создание и развертывание приложений; внедрение аутентификации и защиты данных; и разработка для облачного хранилища и для службы хранилища Azure.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
@@ -22,13 +25,13 @@ locales:
 levels:
 - advanced
 skills:
-- НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-303, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 28 АПРЕЛЯ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 28 июля 2020. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
-- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- НОВАЯ ВЕРСИЯ ЭТОГО ЭКЗАМЕНА, AZ-303, СТАНЕТ ДОСТУПНА ОРИЕНТИРОВОЧНО 29 ИЮНЯ 2020 ГОДА. Вы сможете сдать этот экзамен до того, как он будет отменен ориентировочно 30 сентября 2020. Помимо этого содержание данного экзамена будет обновлено 2 июня 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
 - Развертывание и настройка инфраструктуры (40-45%)
 - Внедрение рабочих нагрузок и безопасности (25-30%)
 - Создание и развертывание приложений (5-10%)
 - Внедрение аутентификации и защиты данных (5-10%)
 - Разработка для облачного хранилища и для службы хранилища Azure (15-20%)
+retirementDate: 09/30/2020
 roles:
 - solution-architect
 products:
@@ -79,7 +82,7 @@ resources:
 - title: Обучение для получения сертификата
   description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure Solutions Architect Expert.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtVsd
-- title: Руководство по обучению и сертификации
+- title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
@@ -100,3 +103,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
