--- a/learn-certs-pr/exams/az-303.yml
+++ b/learn-certs-pr/exams/az-303.yml
@@ -6,11 +6,13 @@ metadata:
 uid: exam.az-303
 displayName: AZ-303
 summary: |-
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+
   Кандидатами на этот экзамен являются архитекторы решений Azure, которые консультируют заинтересованные стороны и преобразуют бизнес-требования в безопасные, масштабируемые и надежные решения. Кандидаты должны обладать передовым опытом и знаниями в области IT-операций, включая сетевое взаимодействие, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформу данных, бюджетирование и управление. Эта роль требует управления тем, как решения в каждой области влияют на общее решение.
-  
+
   Кандидаты должны быть экспертами в администрировании Azure и иметь опыт работы с процессами разработки Azure и процессами DevOps.
-  
-  <div style='color&#58; red; font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; Этот экзамен станет доступен ориентировочно 28 апреля 2020 года.</div>
+
+  <div style='red; font-weight&#58; bold;'><br/>ПРИМЕЧАНИЕ&#58; Этот экзамен станет доступен ориентировочно 29 июня 2020 года.</div>
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: внедрение и контроль инфраструктуры Azure; внедрение решений по управлению и безопасности; внедрение решений для приложений; и внедрение и управление платформ данных.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4psD6
@@ -56,3 +58,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
