--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -1,28 +1,32 @@
 ### YamlMime:Examination
 title: Microsoft Azure DevOps Solutions
 metadata:
-  title: 'Экзамен AZ-400: Microsoft Azure DevOps Solutions'
-  description: 'Экзамен AZ-400: Microsoft Azure DevOps Solutions'
+  title: 'Exam AZ-400: Microsoft Azure DevOps Solutions'
+  description: 'Exam AZ-400: Microsoft Azure DevOps Solutions'
 uid: exam.az-400
 displayName: AZ-400
-summary: >-
-  Кандидаты на этот экзамен - это профессионалы DevOps, которые объединяют людей, процессы и технологии для непрерывного предоставления ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям. Профессионалы DevOps оптимизируют поставку, оптимизируя методы работы, улучшая взаимодействие и совместную работу, а также создавая автоматизацию. Они разрабатывают и венедряют стратегии для кода приложений и инфраструктуры, которые обеспечивают непрерывную интеграцию, тестирование, поставку, отслеживание и обратную связь.
+summary: |-
+  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 15 июня 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
 
+  Кандидаты на этот экзамен - это профессионалы DevOps, которые объединяют людей, процессы и технологии для непрерывного предоставления ценных продуктов и услуг, которые отвечают потребностям конечных пользователей и бизнес-целям. Профессионалы DevOps оптимизируют поставку, оптимизируя методы работы, улучшая взаимодействие и совместную работу, а также создавая автоматизацию. Они разрабатывают и венедряют стратегии для кода приложений и инфраструктуры, которые обеспечивают непрерывную интеграцию, тестирование, поставку, отслеживание и обратную связь.
 
   Кандидаты должны обладать навыками Agile-практик. Они должны быть знакомы с администрированием и разработкой в Azure и обладать экспертизой хотя бы в одной из этих областей. Профессионалы в Azure DevOps должны быть способны спроектировать и реализовать DevOps-практики для контроля версий, соответствия стандартами, infrastructure-as-code, управление настройкой, сборки, выпуска и тестирования, используя технологии Azure.
 subTitle: 'Этот экзамен позволяет оценить вашу способность разработать стратегию DevOps и реализовать следующее: процессы разработки DevOps; управление зависимостями; инфраструктура приложений; а также непрерывную интеграцию, доставку и обратную связь.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VP8d
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-400?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-400&examname=Exam%20AZ-400:%20Microsoft%20Azure%20DevOps%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-400
 locales:
 - en
 - ja
 - zh-cn
 - ko
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-400&examname=Экзамен%20AZ-400:%20Microsoft%20Azure%20DevOps%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Faz-400
 levels:
 - advanced
 skills:
+- Содержание этого экзамена будет обновлено 15 июня 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Проектирование стратегии DevOps (20-25%)
 - Реализация процессов разработки DevOps (20-25%)
 - Внедрение непрерывной интеграции (10-15%)
@@ -38,6 +42,12 @@ products:
 - azure-kubernetes-service
 - azure-container-instances
 - azure-automation
+paths:
+- uid: learn.azdo.evolve-your-devops-practices
+- uid: learn.azdo.build-applications-with-azure-devops
+- uid: learn.azdo.deploy-applications-with-azure-devops
+- uid: learn.azdo.automate-deployments-azure-devops
+- uid: learn.azdo.capture-feedback-monitoring
 courses:
 - uid: course.az-400t01
 - uid: course.az-400t02
@@ -46,12 +56,6 @@ courses:
 - uid: course.az-400t05
 - uid: course.az-400t06
 - uid: course.az-400t07
-paths:
-- uid: learn.azdo.evolve-your-devops-practices
-- uid: learn.azdo.build-applications-with-azure-devops
-- uid: learn.azdo.deploy-applications-with-azure-devops
-- uid: learn.azdo.automate-deployments-azure-devops
-- uid: learn.azdo.capture-feedback-monitoring
 relatedCertifications:
 - related:
     uid: certification.azure-devops
@@ -59,21 +63,25 @@ resources:
 - title: Обучение для получения сертификата
   description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Azure DevOps Engineer Expert.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE41muG
-- title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+- title: Руководство по образовательным курсам и сертификациям
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
