--- a/learn-certs-pr/exams/az-500.yml
+++ b/learn-certs-pr/exams/az-500.yml
@@ -1,28 +1,33 @@
 ### YamlMime:Examination
 title: Microsoft Azure Security Technologies
 metadata:
-  title: 'Экзамен AZ-500: Microsoft Azure Security Technologies'
-  description: 'Экзамен AZ-500: Microsoft Azure Security Technologies'
+  title: 'Exam AZ-500: Microsoft Azure Security Technologies'
+  description: 'Exam AZ-500: Microsoft Azure Security Technologies'
 uid: exam.az-500
 displayName: AZ-500
-summary: >-
-  Кандидатами на этот экзамен являются инженеры по безопасности Microsoft Azure, которые отвечают за средства контроля безопасности, поддерживают состояние безопасности, управляют идентификацией и доступом, а также защищают данные, приложения и сети. Кандидаты выявляют и устраняют уязвимости с помощью различных инструментов безопасности, реализуют защиту от угроз и реагируют на эскалацию инцидентов в области безопасности. В качестве инженера по безопасности Microsoft Azure кандидаты часто являются частью более крупной команды, занимающейся облачным управлением и безопасностью, а также могут защищать гибридные среды в рамках сквозной инфраструктуры.
+summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 20 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
 
+  Кандидатами на этот экзамен являются инженеры по безопасности Microsoft Azure, которые отвечают за средства контроля безопасности, поддерживают состояние безопасности, управляют идентификацией и доступом, а также защищают данные, приложения и сети. Кандидаты выявляют и устраняют уязвимости с помощью различных инструментов безопасности, реализуют защиту от угроз и реагируют на эскалацию инцидентов в области безопасности. В качестве инженера по безопасности Microsoft Azure кандидаты часто являются частью более крупной команды, занимающейся облачным управлением и безопасностью, а также могут защищать гибридные среды в рамках сквозной инфраструктуры.
 
   Кандидаты на этот экзамен должны обладать развитыми навыками в области составления сценариев и автоматизации, глубоким пониманием сетевых технологий, виртуализации и облачных N-уровневых архитектур, а также глубокими знаниями облачных возможностей, продуктов и служб Microsoft Azure и других продуктов и служб Microsoft.
 subTitle: 'Этот экзамен оценивает вашу способность выполнять следующие технические задачи: управление идентификацией и доступом; внедрение защиты платформы; управление операциями безопасности; и защита данных и приложений.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70
 practiceTestUrl: https://www.mindhub.com/p/MU-AZ-500?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-500&examname=Exam%20AZ-500:%20Microsoft%20Azure%20Security%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-500
 locales:
 - en
 - ja
 - zh-cn
 - ko
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-500&examname=Экзамен%20AZ-500:%20Microsoft%20Azure%20Security%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Faz-500
 levels:
 - intermediate
 skills:
+- Содержание этого экзамена будет обновлено 20 мая 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Управление идентификацией и доступом (20-25%)
 - Внедрение защиты платформы (35-40%)
 - Управление операциями безопасности (15-20%)
@@ -38,25 +43,36 @@ products:
 - azure-key-vault
 courses:
 - uid: course.az-500t00
+paths:
+- uid: learn.security.secure-your-cloud-apps
+- uid: learn.security.implement-resource-mgmt-security
+- uid: learn.security.implement-network-security
+- uid: learn.security.implement-host-security
+- uid: learn.security.manage-identity-and-access
+- uid: learn.security.manage-security-operations
 relatedCertifications:
 - related:
     uid: certification.azure-security-engineer
 resources:
-- title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+- title: Руководство по образовательным курсам и сертификациям
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
