--- a/learn-certs-pr/exams/dp-100.yml
+++ b/learn-certs-pr/exams/dp-100.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: Designing and Implementing a Data Science Solution on Azure
 metadata:
   title: 'Exam DP-100: Designing and Implementing a Data Science Solution on Azure'
@@ -6,13 +6,16 @@ metadata:
 uid: exam.dp-100
 displayName: DP-100
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Фаза 1&#58; - Содержание этого экзамена будет обновлено 22 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
-  
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 22 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
+
   Azure Data Scientist применяет свои знания в области data science и машинного обучения для внедрения и выполнения рабочих нагрузок машинного обучения в Azure; в частности, с помощью службы машинного обучения Azure. Это включает планирование и создание подходящей рабочей среды для специалистов в области data science в Azure, проведение экспериментов с данными и обучение прогнозным моделям, управление моделями и их оптимизацию, а также внедрение моделей машинного обучения в производство.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: настройка рабочего пространства в Azure Machine Learning; проводение экспериментов и моделей обучения; оптимизация и управление моделями; и развертывание и использование модели.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjA
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=DP-100&examname=Exam%20DP-100:%20Designing%20and%20Implementing%20a%20Data%20Science%20Solution%20on%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-100
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=DP-100&examname=Exam%20DP-100:%20Designing%20and%20Implementing%20a%20Data%20Science%20Solution%20on%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-100
 locales:
 - en
 - ja
@@ -22,9 +25,9 @@ levels:
 - intermediate
 skills:
 - Содержание этого экзамена будет обновлено 22 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
-- Настройка рабочего пространства в Azure Machine Learning (30-35%). 
-- Проводение экспериментов и моделей обучения (25-30%) 
-- Оптимизация и управление моделями (20-25%) 
+- Настройка рабочего пространства в Azure Machine Learning (30-35%).
+- Проводение экспериментов и моделей обучения (25-30%)
+- Оптимизация и управление моделями (20-25%)
 - Развертывание и использование модели (20-25%)
 roles:
 - data-scientist
@@ -60,3 +63,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
