--- a/learn-certs-pr/exams/dp-300.yml
+++ b/learn-certs-pr/exams/dp-300.yml
@@ -6,14 +6,16 @@ metadata:
 uid: exam.dp-300
 displayName: DP-300
 summary: |-
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+
   Кандидатами на этот экзамен являются администраторы баз данных и специалисты по управлению данными, которые управляют производственными площадками и облачными реляционными базами данных, созданных на основе служб данных Microsoft Azure и Microsoft SQL Server.
-  
+
   'Azure Database Administrator внедряет и управляет функциональными аспектами облачных и гибридных решений на платформе данных, созданными на основе служб данных Microsoft Azure и Microsoft SQL Server.' Azure Database Administrator должен уметь использовать различные методы и инструменты для выполнения повседневных операций, включая применение знаний об использовании T-SQL для административного управления.
-  
+
   Эта роль отвечает за управление, доступность, безопасность и мониторинг производительности, а также оптимизацию современных решений для реляционных баз данных. Специалисты этой роли работают с совместно ролью Azure Data Engineer  для управления функциональными аспектами решений на платформе данных.
-  
-  <div style='color&#58; red;'><br/><strong>Примечание: Этот бета-экзамен не будет доступен до 2 апреля 2020 года. Эта информация не является окончательной, и после официального выпуска экзамена beta возможны незначительные изменения.</div>
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование и реализация ресурсов платформы данных; внедрение безопасной среды; контроль и оптимизация операционных ресурсов; оптимизация производительности запросов;  автоматизация задач; планирование и внедрение среды высокой доступности и аварийного восстановления (HADR); и осуществление администрирования с помощью T-SQL. '
+
+  <div style='font-weight&#58; bold;'><br/>Баллы за бета-версии экзаменов не выставляются сразу, поскольку мы собираем информацию о качестве вопросов и экзамена. Узнайте больше о <a href="/learn/certifications/certification-exams#participating-in-beta-exams">ценности и важности бета-версий экзаменов</a>.</div>
+subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование и реализация ресурсов платформы данных; внедрение безопасной среды; контроль и оптимизация операционных ресурсов; оптимизация производительности запросов;  автоматизация задач; планирование и внедрение среды высокой доступности и аварийного восстановления (HADR); и осуществление администрирования с помощью T-SQL.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4q3yZ
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=DP-300&examname=Exam%20DP-300:%20Administering%20Relational%20Databases%20on%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-300
@@ -26,22 +28,25 @@ skills:
 - Внедрение безопасной среды (15-20%)
 - Контроль и оптимизация операционных ресурсов (15-20%)
 - Оптимизация производительности запросов (5-10%)
-- Автоматизация задач (10-15%)
+- Осуществление автоматизации задач (10-15%)
 - Планирование и внедрение среды высокой доступности и аварийного восстановления (HADR) (15-20%)
 - Осуществление администрирования с помощью T-SQL (10-15%)
 roles:
-- administrator
+- database-administrator
 products:
 - azure
 - azure-automation
+- azure-database-mysql
+- azure-database-postgresql
 - azure-sql-database
 - azure-storage
 - azure-virtual-machines
+- sql-server
 relatedCertifications:
 - related:
     uid: certification.azure-database-administrator-associate
 resources:
-- title: Руководство по обучению и сертификации
+- title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
@@ -62,3 +67,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
