--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -1,44 +1,45 @@
 ### YamlMime:Examination
 title: Microsoft Dynamics 365 Field Service
 metadata:
-  title: 'Экзамен MB-240: Microsoft Dynamics 365 Field Service'
-  description: 'Экзамен MB-240: Microsoft Dynamics 365 Field Service'
+  title: 'Exam MB-240: Microsoft Dynamics 365 Field Service'
+  description: 'Exam MB-240: Microsoft Dynamics 365 Field Service'
 uid: exam.mb-240
 displayName: MB-240
-summary: >-
+summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 19 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
+
   Кандидатами на этот экзамен являются функциональные консультанты Microsoft Dynamics 365 по привлечению клиентов с опытом в обслуживании на местах. Кандидаты отвечают за реализацию решений, управляющих ресурсами, которые завершают жизненный цикл обслуживания на местах.
 
-
-  Кандидаты осуществляют процессы обслуживания на местах, разработанные в сотрудничестве с внутренними и внешними командами специалистов. Это сотрудничество включает в себя настройку стандартных областей администрирования приложения для обслуживания на местах, развертывание решения Connected Field Service (IoT) и мобильного приложения, а также реализацию любых дополнительных необходимых изменений по запросу. Кандидаты отвечают за настройку и развертывание приложения обслуживания на местах совместно с основным приложением обслуживания клиентов.
-
+  Кандидаты осуществляют процессы обслуживания на местах, разработанные в сотрудничестве с внутренними и внешними командами специалистов. Это сотрудничество включает в себя настройку стандартных областей администрирования приложения для обслуживания на местах, развертывание решения Connected Field Service (IoT) и мобильного приложения, а также реализацию любых дополнительных необходимых изменений по запрсоу. Кандидаты отвечают за настройку и развертывание приложения обслуживания на местах совместно с основным приложением обслуживания клиентов.
 
   Кандидаты должны иметь знания о настройке и изменении компонентов приложения обслуживания на местах, включая настройку служб, ресурсов, характеристик, инцидентов, интеграции запасов, соглашения об обслуживании, планирование ресурсов, рабочие задания, задачи обслуживания, роли пользователей при обслуживании на местах, настройки обслуживания на местах, решение Connected Field Service (IoT) и настройка мобильного приложения обслуживания на местах.
 subTitle: 'Данный экзамен позволяет оценить вашу способность выполнять перечисленные ниже технические задачи: настройка приложений обслуживания на местах; управление заказами на работу; планирование и диспетчеризация заказов на работу; управление мобильностью обслуживания на местах; управление запасами и закупками; управление активами и соглашениями.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-240&examname=Exam%20MB-240:%20Microsoft%20Dynamics%20365%20for%20Field%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-240
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-240&examname=Экзамен%20MB-240:%20Microsoft%20Dynamics%20365%20for%20Field%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fmb-240
 levels:
 - intermediate
 skills:
 - Настройка приложений обслуживания на местах (20-25%)
-- Управление заказами на работу (15-20%)
-- Планирование и диспетчеризация заказов на работу (20-25%)
+- Управление заказами на на выполнение работ (15-20%)
+- Планирование и диспетчеризации заказов на выполнение работ (20-25%)
 - Управление мобильностью обслуживания на местах (10-15%)
 - Управление запасами и закупками (10-15%)
 - Управление активами и соглашениями (10-15%)
 roles:
 - functional-consultant
-exams:
-- uid: exam.mb-200
 products:
 - dynamics
 - dynamics-field-service
+exams:
+- uid: exam.mb-200
 courses:
-- uid: course.mb-240t01
-- uid: course.mb-240t02
-- uid: course.mb-240t03
+- uid: course.mb-240t00
 paths:
 - uid: learn-bizapps.implementing-dyn365-field-service
 - uid: learn-bizapps.universal-resource-scheduling
@@ -47,23 +48,27 @@ relatedCertifications:
     uid: certification.d365-functional-consultant-field-service
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Dynamics 365 Field Service Functional Consultant Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35I72
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay [Повтор экзамена]
   description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
