--- a/learn-certs-pr/exams/mb-500.yml
+++ b/learn-certs-pr/exams/mb-500.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: 'Microsoft Dynamics 365: Finance and Operations Apps Developer'
 metadata:
   title: 'MB-500: Microsoft Dynamics 365: Finance and Operations Apps Developer'
@@ -6,33 +6,38 @@ metadata:
 uid: exam.mb-500
 displayName: MB-500
 summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 22 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
+
   Кандидатами на этот экзамен являются разработчики, которые работают с приложениями Finance и Operations в Microsoft Dynamics 365 для реализации и расширения приложений в соответствии с требованиями бизнеса. Кандидаты предоставляют полностью реализованные решения, используя стандартизированные шаблоны кодирования приложений, расширяемые функции и внешние интеграции.
 
   Кандидаты несут ответственность за разработку бизнес-логики с помощью X++, за создание и изменение отчетов и рабочих пространств Finance и Operations, настройку пользовательских интерфейсов, предоставление конечных точек и API-интерфейсов для поддержки приложений и внешних систем Power Platform, за выполнение тестирования, мониторинг производительности, анализ и манипулирование данными, за создание технических проектов и внедрение деталей, а также за реализацию политик разрешений и требований безопасности.
 
   Кандидаты участвуют в миграции данных и объектов из устаревших и внешних систем, интеграции приложений Finance и Operations с другими системами, реализации процесса управления жизненным циклом приложений, планировании функционального дизайна для решений и управлении средами Finance и Operations с помощью Lifecycle Services (LCS).
-  
+
   Кандидаты должны иметь глубокие знания и опыт работы с базовой структурой, структурами данных и объектами, связанными с программами Finance и Operations.
-  
+
   Кандидаты должны иметь опыт работы с продуктами, включая Visual Studio, Azure DevOps, инструменты LCS или SQL Server Management Studio.
-  
+
   Кандидаты должны иметь опыт разработки кода с использованием объектно-ориентированных языков программирования, анализа и обработки данных с использованием кода Transact-SQL, а также создания и запуска команд и сценариев Windows PowerShell.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование архитектуры и проектирование решения; применение инструментов разработчика; проектирование и разработка элементов АОТ; разработка и тестирование кода;внедрение отчетности; интеграция и управление решениями для данных; а также внедрение безопасности и оптимизация производительности.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42pBB
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-500&examname=Exam%20MB-500:%20Microsoft%20Dynamics%20365%20Finance%20and%20Operations%20Apps%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-500
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-500&examname=Exam%20MB-500:%20Microsoft%20Dynamics%20365%20Finance%20and%20Operations%20Apps%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-500
 locales:
 - en
 levels:
 - intermediate
 skills:
-- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- Содержание этого экзамена будет обновлено 22 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
 - Планирование архитектуры и проектирование решения (10-15%)
 - Применение инструментов разработчика (10-15%)
 - Проектирование и разработка элементов АОТ (20-25%)
 - Разработка и тестирование кода (10-15%)
 - Внедрение отчетности (10-15%)
-- Интеграция и управление решениями для данных (10-15%)
+- Интеграция и управление данными (10-15%)
 - Внедрение безопасности и оптимизация производительности (10-15%)
 roles:
 - developer
@@ -77,3 +82,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
