--- a/learn-certs-pr/exams/ms-600.yml
+++ b/learn-certs-pr/exams/ms-600.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: 'Building Applications and Solutions with Microsoft 365 Core Services'
 metadata:
   title: 'Exam MS-600: Building Applications and Solutions with Microsoft 365 Core Services'
@@ -6,6 +6,8 @@ metadata:
 uid: exam.ms-600
 displayName: MS-600
 summary: |-
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+
   Кандидатами на этот экзамен являются Microsoft 365 Developers [разработчики Microsoft 365], которые проектируют, создают, тестируют и поддерживают приложения и решения, оптимизированные для обеспечения потребностей организаций, использующих платформу Microsoft 365, в продуктивности и совместной работе.
 
   Кандидаты на этот экзамен должны быть хорошо знакомы с идентификацией Microsoft и Microsoft Graph. Они должны обладать общими знаниями об элементах пользовательского интерфейса (включая Adaptive Cards и UI Fabric), точках интеграции (в том числе Microsoft Teams, надстройки Office, SharePoint Framework, Actionable Messages) и определении целей платформы рабочей нагрузки.
@@ -14,13 +16,13 @@ summary: |-
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: внедрение Microsoft Identity; создание приложений с помощью Microsoft Graph; расширение и настройка SharePoint; расширение Teams; и расширение Office.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43CZn
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-600&examname=Exam%20MS-600:%20Building%20Applications%20and%20Solutions%20with%20Microsoft%20365%20Core%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-600
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-600&examname=Exam%20MS-600:%20Building%20Applications%20and%20Solutions%20with%20Microsoft%20365%20Core%20Services&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-600
 locales:
 - en
 levels:
 - intermediate
 skills:
-- 'NOTE: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
+- 'Примечание: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Внедрение Microsoft Identity (20-25%)
 - Создание приложений с помощью Microsoft Graph (20-25%)
 - Расширение и настройка SharePoint (20-25%)
@@ -64,3 +66,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
