--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -1,37 +1,41 @@
 ### YamlMime:Examination
-title: Managing Microsoft Teams
+title: 'Managing Microsoft Teams'
 metadata:
-  title: 'Экзамен MS-700: Managing Microsoft Teams'
-  description: 'Экзамен MS-700: Managing Microsoft Teams'
+  title: 'Exam MS-700: Managing Microsoft Teams'
+  description: 'Exam MS-700: Managing Microsoft Teams'
 uid: exam.ms-700
 displayName: MS-700
-summary: >-
-  Кандидаты на этот экзамен являются администраторы Microsoft Teams в своей организации. Администратор Microsoft Teams настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
+summary: |-
+  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 28 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
 
+  Кандидаты на этот экзамен являются Microsoft Teams Administrator [администраторы Microsoft Teams] в своей организации. Microsoft Teams Administrator [Администратор Microsoft Teams] настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
 
-  Администратор Teams должен быть способным планировать, развертывать и управлять командами в чате, приложениях, каналах, на собраниях, аудиоконференциях, интерактивных мероприятиях и вызовах. Администратор Teams также отвечает за обновлениеSkype for Business для Teams.
+  Teams Administrator [Администратор Teams] должен быть способным планировать, развертывать и управлять командами в чате, приложениях, каналах, на собраниях, аудиоконференциях, интерактивных мероприятиях и вызовах. Teams Administrator [Администратор Teams] также отвечает за обновление Skype for Business для Teams.
 
+  Teams Administrator [Администратор Teams] сотрудничает с инженерами телефонии, чтобы интегрировать расширенные функции голосовой связи в Microsoft Teams. Эта роль не отвечает за настройку прямой маршрутизации, настройку маршрутизации вызовов или интеграцию телефонии. Teams Administrator [Администратор Teams] может работать с другими ролями администратора рабочей нагрузки, включая безопасность и соответствие требованиям, обмен сообщениями, работу в сети, идентификацию и устройства.
 
-  Администратор Teams сотрудничает с инженерами телефонии, чтобы интегрировать расширенные функции голосовой связи в Microsoft Teams. Эта роль не отвечает за настройку прямой маршрутизации, настройку маршрутизации вызовов или интеграцию телефонии. Администратор Teams может работать с другими ролями администратора рабочей нагрузки, включая безопасность и соответствие требованиям, обмен сообщениями, работу в сети, идентификацию и устройства.
-
-
-  Кандидаты на этот экзамен должны уметь управлять настройками Teams с помощью PowerShell. Администратор Teams должен обладать базовыми знаниями о точках интеграции с приложениями и службами, включая, помимо прочего, SharePoint, OneDrive для бизнеса, Exchange, Azure AD и Office 365 Groups. Администратор Teams понимает, как интегрировать внешние приложения и сервисы.
+  Кандидаты на этот экзамен должны уметь управлять настройками Teams с помощью PowerShell. Teams Administrator [Администратор Teams] должен обладать базовыми знаниями о точках интеграции с приложениями и службами, включая, помимо прочего, SharePoint, OneDrive for Business, Exchange, Azure AD и Office 365 Groups. Teams Administrator [Администратор Teams] понимает, как интегрировать внешние приложения и сервисы.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование и настройка среды Microsoft Teams; управление чатом, звонками и встречами; и управление политиками Teams и приложений.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43VcF
+practiceTestUrl: https://www.mindhub.com/p/MU-MS-700?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-700&examname=Exam%20MS-700:%20Managing%20Microsoft%20Teams&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-700
 locales:
 - en
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-700&examname=Экзамен%20MS-700:%20Managing%20Microsoft%20Teams&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fru-ru%2Flearn%2Fcertifications%2Fexams%2Fms-700
 levels:
 - intermediate
 skills:
-- Планирование и настройка среды Microsoft Teams (45-50%)
+- Содержание этого экзамена будет обновлено 28 мая 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
+- Планирование и настройка среды для Microsoft Teams (45-50%)
 - Управление чатом, звонками и встречами (30-35%)
-- Управление политиками Teams и приложений (20-25%)
+- Управление политиками команд и приложений (20-25%)
 roles:
 - administrator
 products:
 - m365
+- office-teams
 courses:
 - uid: course.ms-700t00
 paths:
@@ -42,23 +46,27 @@ relatedCertifications:
     uid: certification.m365-teams-administrator-associate
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Teams Administrator Associate.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Teams Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE45gtR
-- title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+- title: Руководство по образовательным курсам и сертификациям
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: ../deals.md
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
