--- a/learn-certs-pr/exams/ms-900.yml
+++ b/learn-certs-pr/exams/ms-900.yml
@@ -1,13 +1,17 @@
 ### YamlMime:Examination
 title: Microsoft 365 Fundamentals
 metadata:
-  title: 'Экзамен MS-900: Microsoft 365 Fundamentals'
-  description: 'Экзамен MS-900: Microsoft 365 Fundamentals'
+  title: 'Exam MS-900: Microsoft 365 Fundamentals'
+  description: 'Exam MS-900: Microsoft 365 Fundamentals'
 uid: exam.ms-900
 displayName: MS-900
-summary: >-
-  Этот экзамен предназначен для кандидатов, желающих продемонстрировать базовые знания о соображениях и преимуществах использования облачных сервисов в целом и облачной модели программного обеспечения как услуги (SaaS). Этот экзамен также оценивает знания о доступных опциях и преимуществах, полученных при реализации предложений по облачным сервисам Microsoft 365.
+summary: |-
+  <div>
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 14 апреля 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
+  </div>
 
+  Этот экзамен направлен на кандидатов, желающих продемонстрировать фундаментальные знания нюансов и преимуществ в использовании облачных сервисов в целом и использовании модели Software as a Service (SaaS). Этот экзамен также оценивает знания о доступных опциях и преимуществах, полученных при реализации предложений по облачным сервисам Microsoft 365.
 
   Этот экзамен можно сдать в качестве предшествующего уровня экзаменов по облачным вычислениям и технологиям, таким как Office 365, Microsoft Intune, Azure Information Protection (AIP) и Windows 10.
 subTitle: Докажите, что вы понимаете облачные концепты; основные сервисы и концепты Microsoft 365; концепты безопасности, соответствия требованиям, конфиденциальности и доверия в Microsoft 365, а также ценообразование и поддержку Microsoft 365.
@@ -18,17 +22,18 @@ locales:
 - en
 - ja
 providers:
-  - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-900&examname=Экзамен%20MS-900:%20Microsoft%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Fen-us%2Flearn%2Fcertifications%2Fexams%2Fms-900
-  - providerType: certiport
-    examUrl: https://www.certiport.com/locator
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MS-900&examname=Exam%20MS-900:%20Microsoft%20365%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-900
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 levels:
 - beginner
 skills:
-- Понимание облачных концепций (15-20%)
-- Понимание основных сервисов и концептов Microsoft 365 (30-35%)
-- Понимание концептов безопасности, соответствия требованиям, конфиденциальности и доверия в Microsoft 365 (25-30%)
-- Понимание ценообразования и поддержки Microsoft 365 (25-30%)
+- Содержание этого экзамена было обновлено 14 апреля 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Описание облачных концепций (15-20%)
+- Описание основных служб и концепций Microsoft 365 (30-35%)
+- Описание параметров безопасности, соответствия, конфиденциальности и доверия в Microsoft 365 (25-30%)
+- Описание опций ценообразования и поддержки Microsoft 365  (25-30%)
 roles:
 - administrator
 products:
@@ -44,20 +49,24 @@ relatedCertifications:
     uid: certification.microsoft-365-fundamentals
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft Certified: Fundamentals.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Fundamentals.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE35svT
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+- title: Плакат с сертификацией
+  description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
 - title: Поддержка сертификационных экзаменов
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: ../help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Запрос специальных условий
   description: Узнайте больше о том, как подать заявку на получение специальных условий для сдачи экзамена.
-  href: https://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
+  href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
