--- a/learn-certs-pr/exams/pl-900.yml
+++ b/learn-certs-pr/exams/pl-900.yml
@@ -1,4 +1,4 @@
-﻿### YamlMime:Examination
+### YamlMime:Examination
 title: 'Microsoft Power Platform Fundamentals'
 metadata:
   title: 'Exam PL-900: Microsoft Power Platform Fundamentals'
@@ -6,23 +6,29 @@ metadata:
 uid: exam.pl-900
 displayName: PL-900
 summary: |-
+  <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 1 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.<br/><br/></div>
+  </div>
+
   Кандидатами на этот экзамен являются пользователи, которые стремятся повысить производительность труда, автоматизируя бизнес-процессы, анализируя данные для получения бизнес-аналитики и действуя более эффективно, создавая простые приложения.
-  
-  Этот экзамен включает следующие задания&#58; описание компонентов Power Platform&#58; Power Apps, Power BI, Microsoft Automate, Common Data Service (CDS), коннекторы и AI Builder; описание кросс-облачных сценариев с представлением в Microsoft 365, Dynamics 365, Microsoft Azure и сторонних сервисах; определение преимуществ и возможностей Power Platform; определение основных функциональных возможностей и ценностей для бизнеса компонентов Power Platform; реализация простых решений с помощью Microsoft Automate, Power BI и AI Builder; и создание базовых приложений в среде без кода.
+
+  Этот экзамен включает следующие задания&#58; описание компонентов Power Platform; Power Apps, Power BI, Microsoft Automate, Common Data Service (CDS), коннекторы и AI Builder; описание кросс-облачных сценариев с представлением в Microsoft 365, Dynamics 365, Microsoft Azure и сторонних сервисах; определение преимуществ и возможностей Power Platform; определение основных функциональных возможностей и ценностей для бизнеса компонентов Power Platform; реализация простых решений с помощью Microsoft Automate, Power BI и AI Builder; и создание базовых приложений в среде без кода.
 subTitle: Этот экзамен позволяет оценить вашу способность понимать ценность Power Platform для бизнеса; понимать основные компоненты Power Platform; продемонстрировать деловую ценность Power BI; и продемонстрировать деловую ценность Microsoft Automate.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Nnn
+practiceTestUrl: https://www.mindhub.com/p/MU-PL-900?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 locales:
 - en
 providers:
-  - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900
-  - providerType: certiport
-    examUrl: http://www.certiport.com/locator
+- providerType: pearson-vue
+  examUrl: 'https://examregistration.microsoft.com/?locale=ru-ru&examcode=PL-900&examname=Exam%20PL-900:%20Microsoft%20Power%20Platform%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-900'
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 levels:
 - beginner
 skills:
-- Понимание ценности Power Platform для бизнеса (20-25 %)
+- Содержание этого экзамена будет обновлено 1 мая 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.
+- Понимание ценности Power Platform для бизнеса (20-25%)
 - Понимание основных компонентов Power Platform (20-25%)
 - Демонстрация ценности Power BI для бизнеса (15-20%)
 - Демонстрация ценности Power Apps для бизнеса(20-25%)
@@ -63,3 +69,4 @@ resources:
 - title: Правила проведения экзаменов и часто задаваемые вопросы
   description: Ознакомьтесь с правилами экзамена и часто задаваемыми вопросами.
   href: ../certification-exam-policies.md
+
