--- a/learn-certs-pr/m365-developer-associate.yml
+++ b/learn-certs-pr/m365-developer-associate.yml
@@ -2,18 +2,20 @@
 title: 'Microsoft 365 Certified: Developer Associate'
 metadata:
   title: 'Microsoft 365 Certified: Developer Associate'
-  description: Developer Associate проектируют, создают, тестируют и обслуживают приложения и решения, оптимизированные для повышения продуктивности работы и совместной работы организаций, использующих платформу Microsoft 365.
+  description: Microsoft 365 Developers [Разработчики Microsoft 365] проектируют, создают, тестируют и обслуживают приложения и решения, оптимизированные для повышения продуктивности работы и совместной работы организаций, использующих платформу Microsoft 365.
 uid: certification.m365-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: >-
-  Developer Associate проектируют, создают, тестируют и обслуживают приложения и решения, оптимизированные для повышения продуктивности работы и совместной работы организаций, использующих платформу Microsoft 365.
+summary: |-
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
 
+  Microsoft 365 Developers [Разработчики Microsoft 365] проектируют, создают, тестируют и обслуживают приложения и решения, оптимизированные для повышения продуктивности работы и совместной работы организаций, использующих платформу Microsoft 365.
 
-  Developer Associate хорошо знакомы с Microsoft и Microsoft Graph. Они имеют общими знаниями об элементах пользовательского интерфейса (в том числе Adaptive Cards и UI Fabric), точках интеграции (в том числе Microsoft Teams, Office Add-ins, SharePoint Framework, Actionable Messages) и определении целей платформы рабочей нагрузки.
-subTitle: Developer Associate проектируют, создают, тестируют и обслуживают приложения и решения, оптимизированные для повышения продуктивности работы и совместной работы организаций, использующих платформу Microsoft 365.
+  Microsoft 365 Developers [Разработчики Microsoft 365] хорошо знакомы с Microsoft и Microsoft Graph. Они должны обладать общими знаниями об элементах пользовательского интерфейса (включая Adaptive Cards и UI Fabric), точках интеграции (в том числе Microsoft Teams, надстройки Office, SharePoint Framework, Actionable Messages) и определении целей платформы рабочей нагрузки.
+subTitle: Microsoft 365 Developers [Разработчики Microsoft 365] проектируют, создают, тестируют и обслуживают приложения и решения, оптимизированные для повышения продуктивности работы и совместной работы организаций, использующих платформу Microsoft 365.
 levels:
 - intermediate
 skills:
+- 'Примечание: Тезисы, отображаемые под каждым из навыков в приведенном ниже документе с оцениваемыми навыками, предназначены для иллюстрации того, как мы оцениваем эти навыки. Этот список не является окончательным или исчерпывающим.'
 - Внедрение Microsoft Identity
 - Создание приложений с помощью Microsoft Graph
 - Расширение и настройка SharePoint
@@ -35,20 +37,21 @@ exams:
 - uid: exam.ms-600
 resources:
 - title: Обучение для получения сертификата
-  description: 'Откройте для себя учебные ресурсы, чтобы получить сертификат Microsoft 365 Certified: Developer Associate.'
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Developer Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4561r
-- title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+- title: Руководство по образовательным курсам и сертификациям
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: deals.md
-- title: Поддержка сертификационных
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+- title: Поддержка по вопросам сертификации
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
