--- a/learn-certs-pr/power-apps-and-d365-developer-associate.yml
+++ b/learn-certs-pr/power-apps-and-d365-developer-associate.yml
@@ -5,22 +5,25 @@ metadata:
   description: Разработчики, работающие с Microsoft Power Apps и Dynamics 365, несут ответственность за проектирование, разработку, защиту и расширение реализации Dynamics 365. Кандидаты реализуют компоненты решения, которые включают в себя усовершенствования приложений, опыт взаимодействия с пользователем, системные интеграции, преобразования данных, индивидуальную автоматизацию процессов и пользовательские визуализации.
 uid: certification.power-apps-and-d365-developer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: Разработчики, работающие с Microsoft Power Apps и Dynamics 365, несут ответственность за проектирование, разработку, защиту и расширение реализации Dynamics 365. Кандидаты реализуют компоненты решения, которые включают в себя усовершенствования приложений, опыт взаимодействия с пользователем, системные интеграции, преобразования данных, индивидуальную автоматизацию процессов и пользовательские визуализации.
+summary: |-
+  <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
+
+  Разработчики, работающие с Microsoft Power Apps и Dynamics 365, несут ответственность за проектирование, разработку, защиту и расширение реализации Dynamics 365. Кандидаты реализуют компоненты решения, которые включают в себя усовершенствования приложений, опыт взаимодействия с пользователем, системные интеграции, преобразования данных, индивидуальную автоматизацию процессов и пользовательские визуализации.
 subTitle: Разработчики, работающие с Microsoft Power Apps и Dynamics 365, несут ответственность за проектирование, разработку, защиту и расширение реализации Dynamics 365.
 levels:
 - intermediate
 skills:
 - Осуществление обнаружения, планирования и анализа
-- Управление дизайном пользовательского интерфейса
+- Управление пользовательским интерфейсом
 - Управление объектами и данными
-- Обеспечение безопасности
+- Реализация безопасности
 - Реализация интеграции
 - Выполнение развертывания и тестирования решений
 - Создание технического дизайна
-- Настройка службы Common Data Service (CDS)
-- Создание и настройка приложений в Power
+- Настройка общих служб данных (CDS)
+- Создание и настройка приложений Power
 - Настройка автоматизации бизнес-процессов
-- Улучшение опыта пользователя
+- Улучшение опыта работы пользователей
 - Расширение платформы
 - Разработка интеграций
 roles:
@@ -52,18 +55,22 @@ exams:
 - uid: exam.mb-200
 - uid: exam.mb-400
 resources:
-- title: Руководство по обучению и сертификации
-  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
+- title: Обучение для получения сертификата
+  description: 'Откройте для себя учебные ресурсы, чтобы получить Microsoft Certified: Power Apps + Dynamics 365 Developer Associate.'
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4o4j6
+- title: Руководство по образовательным курсам и сертификациям
+  description: Изучите все сертификаты в кратком руководстве по образовательным курсам и сертификациям.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
-- title: Повтор экзамена
-  description: Два замечательных предложения, которые помогут вам повысить ваши шансы на успех.
+- title: Exam Replay [Повтор экзамена]
+  description: Два замечательных предложения, которые помогут вам повысить шансы на успех.
   href: deals.md
-- title: Поддержка сертификационных
-  description: Получить помощь через форум поддержки сертификации Microsoft Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
+- title: Поддержка по вопросам сертификации
+  description: обратитесь за помощью на форумы поддержки сертификации Microsoft. Модератор форума ответит в течение одного рабочего дня, с понедельника по пятницу.
   href: help.md
 - title: Панель управления сертификацией
   description: Просмотр и управление запланированными мероприятиями, сертификатами и транскриптами.
   href: https://www.microsoft.com/learning/dashboard.aspx
+
